--- a/package.json
+++ b/package.json
@@ -19,9 +19,32 @@
   },
   "author": "Avanish",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kernelbat/helperservices.git"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "files": [
+    "build",
+    "src"
+  ],
+  "exports": {
+    ".": {
+      "import": "./src/index.js",
+      "require": "./src/index.js"
+    }
+  },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.16.2",
+    "cloudinary": "^2.5.1",
     "express": "^4.21.1",
-    "typescript": "^5.7.2"
+    "http-status-codes": "^2.3.0",
+    "mongoose": "^8.8.3",
+    "typescript": "^5.7.2",
+    "winston": "^3.17.0",
+    "winston-elasticsearch": "^0.19.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.9",
